# siera

./: .clang-format  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: TestRunner.cpp.2194A12723275248.idx  event.c.E3F28F41617BAF00.idx  event.h.20E5465A5D631CFC.idx  event_subscription.c.623AEE9B5D30FF56.idx  event_subscription.h.BE146B72B9F1CD4D.idx  list.c.2C69211F40C96B1C.idx  list.h.F11A68841BCFD341.idx  lv_conf.h.3FBBB2DACC892606.idx  queue.c.B0398B9C498F9084.idx  queue.h.11A5CBCC24C5D6CE.idx  test_event.cpp.E625A4D41E6C7150.idx  test_list.cpp.1BD5EDF78864FFD5.idx  test_list.cpp.D22BDB286D0B2858.idx  test_queue.cpp.1A61187193D9AA64.idx  test_queue.cpp.C62D3C581B458071.idx
.claude/commands/: new-module.md  new-test.md
.github/workflows/: ci.yml
doc/design/: mvp_ui_design.md
docs/design/: architecture.md  build-system.md  mvp_ui_design.md
docs/lvgl/: 01_getting_started.md  02_globals.md  03_screens.md  04_components.md  05_widgets.md  06_styles.md  README.md  lvgl_xml.md
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.c
examples/simulator/: CMakeLists.txt  hello_view.c  hello_view.h  main.c
src/core/: CMakeLists.txt  utils.h
src/core/data_structures/: list.c  list.h  queue.c  queue.h
src/core/database/: database.c  database.h  database_utils.h  i_datastream.h  ram_datastream.c  ram_datastream_utils.h
src/core/datastream/: composite_datastream.c  composite_datastream.h  i_datastream.h  ram_datastream.h
src/core/event/: event.c  event.h  event_subscription.c  event_subscription.h
src/core/state_machine/: fsm.c  fsm.h
src/core/timer/: i_timesource.h  timer.c  timer.h
src/driver/: CMakeLists.txt
src/driver/simulator/: display_simulator.c  display_simulator.h  timesource_simulator.c  timesource_simulator.h
src/lvgl/: CMakeLists.txt
src/ui/: CMakeLists.txt  lv_conf.h
src/ui/display/: i_display.h
src/ui/screen_manager/: screen_manager.c  screen_manager.h
src/ui/view/: i_view.h  menu_iter.h  menu_list_iter.h
tests/: CMakeLists.txt  TestRunner.cpp
tests/core/: CMakeLists.txt
tests/core/data_structures/: test_list.cpp  test_queue.cpp
tests/core/database/: test_database.cpp
tests/core/datastream/: test_composite_datastream.cpp  test_ram_datastream.cpp
tests/core/event/: test_event.cpp
tests/core/state_machine/: test_fsm.cpp
tests/core/timer/: test_timer.cpp
tests/doubles/core/datastream/: double_datastream.cpp  double_datastream.hpp
tests/doubles/core/timer/: double_timesource.c  double_timesource.h
